# tsumego

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  TRAINING.md  docker-compose.yml  lab-notebook.md
api/: .dockerignore  Dockerfile  README.md  pyproject.toml
api/src/goapp_api/: __init__.py  compare_on_val.py  corner_inference.py  detection.py  discretize.py  edge_classifier.py  edge_inference.py  eval_stone_models.py  export_val_dataset.py  generate_comparison.py  grid_classifier.py  grid_detect.py  grid_fit.py  grid_inference.py  grid_to_sgf.py  inference.py  main.py  paths.py  pipeline.py  pitch.py  schemas.py  sgf.py  snap_classifier.py  snap_inference.py  stone_inference.py  train_board.py  train_board_synth.py  train_corners_yolo.py  train_edges.py  train_grid.py  train_joint.py  train_snap.py  train_stones.py  train_stones_yolo.py  training.py  tsumego.py
api/src/goapp_api/synth/: __init__.py  board_render.py  degrade.py  extract_edge_crops.py  extract_grid_crops.py  extract_snap_crops.py  extract_stone_crops.py  gen.py  page_compose.py  text_sources.py
api/tests/: test_health.py
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/scripts/: export_onnx.py
backend/src/goapp/: auth.py  gcs.py  ingest_jobs.py  links.py  patch_sessions.py  paths.py  pdf_ingest.py  profile.py  study.py  tsumego.py
backend/src/goapp/api/: __init__.py
backend/src/goapp/cli/: backfill_attempt_snapshots.py  compare_on_val.py  export_val_dataset.py  generate_comparison.py  ingest_pdf.py  link.py  push_hm2.py  split_hm2.py
backend/src/goapp/ml/: _yolo_onnx.py  pipeline.py
backend/src/goapp/synth/: gen.py  (+3 more)
backend/tests/: test_health.py
(+101 files in other folders)
